<resources>
    <string name="app_name">MedicalAssistant</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="take_picture">Take Picture</string>
    <string name="existing_image">Existing Image</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="emergency_contact_name">Emergency Contact Name</string>
    <string name="emergency_contact_phone">Emergency Contact Phone</string>
    <string name="primary_care_physician">Primary Care Physician</string>
    <string name="primary_care_phone">Primary Care Phone</string>
    <string name="save">Save</string>
    <string name="create_user">Create User</string>
    <string name="channel_name">Set Alarm</string>
    <string name="channel_description">Set medication alarm</string>
</resources>
